# stat-master-nace

./: .cruft.json  .cruft.jsonc  .gitignore  NaN_fasttext_hier_model_paths.json  README.md  SECURITY.md  autotune_text.out  autotune_text_name.out  best_paramssection.json  best_paramssn2025_1.json  fasttext_hier_model_paths.json  llm_classifier_flat.py  llm_classifier_flat_config.py  llm_classifier_hier.py  main.py  pyproject.toml  run_baseline.py  run_data_explore.py  run_dummy.py  run_exploration.py  run_fasttxt_hier.py  run_fastxt_hier.sh  run_fastxt_hier.slurm  run_feature_hyp_selection_fastxt.py  run_flat_fastxt.py  run_hier_explore.py  run_hier_explore.sh  run_llm_classifier_flat.slurm  run_llm_classifier_flat_config.slurm  run_llm_classifier_hier.slurm  run_llm_scores.py  run_norbert.py  run_norbert.sh  run_scorer.sh  scorer.py  zzz_debug.py
.github/workflows/: tests.yml
data/: Untitled.py  etternavn.xls  experiments.py  fasttext_input.txt  forest.dot  kvinneNavn.xlsx  manneNavn.xlsx  nace25_hierarki.csv
dev/: test.py
mappings/: map_div_to_sec  sn2025_mapping.json
results/: README.md
results/fasttext/json_files/: NaN_fasttext_hier_model_paths.json  best_paramsdivision.json  (+3 more)
src/: __init__.py  analyse_preds.py  config.py  exploration.py  images.py  metrics.py  parser.py  preprocess.py
src/data/: Untitled.py  experiments.py  fasttext_input.txt  nace07_hierarki.csv
src/functions/: fizzbuzz.py
src/models/: baseline.py  baseline_hier.py  run_null_models_hier.py
src/utils/: baseline_hier.py  baseline_utils.py  utils.py
tests/: test_fizzbuzz.py
(+6 files in other folders)
