[tool.poetry]
name = "stat-master-nace"
version = "0.1.0"
description = "Automating NACE classification."
authors = ["Minauio <minash19@yahoo.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dapla-toolbelt = ">=1.3.2"
ipykernel = ">=6.15.3"
matplotlib = "^3.10.3"
fasttext = "^0.9.3"
seaborn = "^0.13.2"
anytree = "^2.13.0"
graphviz = "^0.21"
pydot = "^4.0.1"
scikit-learn = "^1.7.1"
optuna = "^4.5.0"
faker = "^37.8.0"
bs4 = "^0.0.2"
fasttext-numpy2 = "^0.10.4"
ssb-klass-python = "^1.0.2"
s3fs = "^2025.10.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
pytest-cov = ">=5.0.0"
black = {extras = ["jupyter"], version = ">=24.4.2"}
isort = ">=5.12.0"
pre-commit = ">=3.3.1"
pre-commit-hooks = ">=4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
skip_gitignore = true
lines_after_imports = 2
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.jupytext]
formats = "ipynb,auto:percent"
notebook_metadata_filter = "jupytext.text_representation,-jupytext.text_representation.jupytext_version,-widgets,-varInspector"
cell_metadata_filter = "-papermill,tags"

[tool.pytest.ini_options]
pythonpath = ["src"]
